--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=:8080
-DSN=postgres://postgres:0000@localhost:5432/postgres?sslmode=disable
+PORT=8088
+DSN=postgres://postgres:qwerty@db:5432/gocloud?sslmode=disable
 DRIVER_NAME=postgres
+DB_PORT=5436
